[metadata]
name = stemgen
version = 1.0.0
author = Axel Delafosse
author_email = axeldelafosse@gmail.com
description = Stemgen is a Stem file generator. Convert any track into a stem and have fun with Traktor.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://stemgen.dev
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    mutagen

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
    stemgen = cli.stemgen:main
    stem = cli.stem:main
    stemsep = cli.stemsep:main
    stemtag = cli.stemtag:main
    stemcopy = cli.stemcopy:main
    ableton = cli.ableton:main
    pretty-collection = cli.pretty_collection:main
    pretty-history = cli.pretty_history:main
    pretty-playlists = cli.pretty_playlists:main
