[metadata]
name = stemgen
version = 2.0.7
author = Axel Delafosse
author_email = axeldelafosse@gmail.com
description = Stemgen is a Stem file generator. Convert any track into a stem and have fun with Traktor.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://stemgen.dev
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    Lossless-BS-RoFormer
    mutagen
    torch
    soundfile
    pyloudnorm
    traktor-nml-utils
    pyautogui
    pylive
    opencv-python

[options.package_data]
* = *.json, *.png, ni-stem/**/*

[options.entry_points]
console_scripts =
    stemgen = stemgen.cli:main
    stem = stemgen.stem:main
    stemsep = stemgen.stemsep:main
    stemtag = stemgen.stemtag:main
    stemcopy = stemgen.stemcopy:main
    ableton = stemgen.ableton:main
    pretty-collection = stemgen.pretty_collection:main
    pretty-history = stemgen.pretty_history:main
    pretty-playlists = stemgen.pretty_playlists:main
